[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player/Stats.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/statsBaseSprite.png" type="Texture" id=2]
[ext_resource path="res://Fonts/SomepxLarge.fnt" type="BitmapFont" id=3]

[node name="StatsControl" type="Control"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 320.0
margin_bottom = 290.0
script = ExtResource( 1 )

[node name="StatsCamera" type="Camera2D" parent="."]

position = Vector2( 0, 5 )
offset = Vector2( 160, 140 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2

[node name="Sprite" type="Sprite" parent="."]

position = Vector2( 60, 60 )
texture = ExtResource( 2 )

[node name="StatLabels" type="Control" parent="."]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="HpLabel" type="Label" parent="StatLabels"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 220.0
margin_top = 10.0
margin_right = 236.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DefenseLabel" type="Label" parent="StatLabels"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 220.0
margin_top = 30.0
margin_right = 244.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DEF"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpeedLabel" type="Label" parent="StatLabels"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 220.0
margin_top = 50.0
margin_right = 245.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPD"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StrengthLabel" type="Label" parent="StatLabels"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 220.0
margin_top = 70.0
margin_right = 242.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STR"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XpLabel" type="Label" parent="StatLabels"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 220.0
margin_top = 90.0
margin_right = 242.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "XP"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StatValues" type="Control" parent="."]

editor/display_folded = true
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="HpValue" type="Label" parent="StatValues"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 260.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DefenseValue" type="Label" parent="StatValues"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 260.0
margin_top = 30.0
margin_right = 300.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpeedValue" type="Label" parent="StatValues"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 260.0
margin_top = 50.0
margin_right = 300.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StrengthValue" type="Label" parent="StatValues"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 260.0
margin_top = 70.0
margin_right = 300.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XpValue" type="Label" parent="StatValues"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 260.0
margin_top = 90.0
margin_right = 300.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="KnownMovesLabel" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 10.0
margin_top = 160.0
margin_right = 100.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Known Moves"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="KnownMoves" type="Control" parent="."]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Move1" type="Label" parent="KnownMoves"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 10.0
margin_top = 180.0
margin_right = 100.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Move2" type="Label" parent="KnownMoves"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 10.0
margin_top = 200.0
margin_right = 100.0
margin_bottom = 220.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Move3" type="Label" parent="KnownMoves"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 10.0
margin_top = 220.0
margin_right = 100.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Move4" type="Label" parent="KnownMoves"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 10.0
margin_top = 240.0
margin_right = 100.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ColorFrame" type="ColorFrame" parent="."]

show_behind_parent = true
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 320.0
margin_bottom = 290.0
color = Color( 1, 1, 1, 1 )

[node name="LvlLabel" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 10.0
margin_top = 120.0
margin_right = 50.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
